# ubiquant

./: README.md  pyproject.toml
src/: Testing Different approaches to cross validation.ipynb  fast_data_loading_and_low_mem_with_parquet_files.ipynb  optimising_LGBM.ipynb  testing_different_approaches_to_cross_validation.ipynb
